# proxy-apifreellm

./: .env.sample  README.md  main.py  pyproject.toml
src/apifreellm_proxy/: app.py  client.py  config.py  constants.py  logger.py  rate_limiter.py
src/apifreellm_proxy/backend/: __init__.py  apifreellm.py  base.py
src/apifreellm_proxy/openai/: errors.py  exception_handlers.py  prompt_builder.py  router.py  tool_calling.py
src/apifreellm_proxy/openai/builders/: chat.py  responses.py  utils.py
src/apifreellm_proxy/openai/models/: chat.py  models.py  responses.py
src/apifreellm_proxy/openai/translators/: chat.py  responses.py
tests/: test_agent.py  test_bind_tools.py  test_client.py  test_langchain.py  test_openai.py  test_prompt.py  test_response_api.py  test_responses.py  test_tool.py  test_translator.py
