[project]
name = "apifreelllm-proxy"
version = "0.1.0"
description = "OpenAI-compatible proxy for ApiFreeLLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.8",
    "mcp>=1.28.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apifreellm_proxy"]
